# kali_magazine_backend

./: pyproject.toml
businesses/: admin.py  apps.py  models.py  serializers.py
businesses/api/v1/: urls.py  views.py
businesses/migrations/: 0001_initial.py  0002_initial.py
common/: models.py  permissions.py  urls.py  views.py
config/: settings.py  urls.py
foods/: admin.py  models.py  serializers.py
foods/api/v1/: urls.py  views.py
foods/migrations/: 0001_initial.py  0002_initial.py
lifestyles/: admin.py  apps.py  models.py  serializers.py
lifestyles/api/v1/: urls.py  views.py
lifestyles/migrations/: 0001_initial.py  0002_initial.py
travels/: admin.py  models.py  serializers.py
travels/api/v1/: urls.py  views.py
travels/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py
users/api/v1/: urls.py  views.py
users/migrations/: 0001_initial.py
